# dutils

./: .pre-commit-config.yaml  Cargo.toml  README.md
completions/: _handlr  handlr  handlr.fish
src/: cli.rs  config.rs  error.rs  main.rs  utils.rs
src/apps/: system.rs  user.rs
src/common/: db.rs  desktop_entry.rs  handler.rs  mime_types.rs  path.rs
