[package]
name = "dutils"
version = "0.6.4"
authors = ["zefr0x", "Gregory <gregory.mkv@gmail.com>"]
edition = "2021"
description = "Manage mimeapps.list and default applications with ease"
readme = "README.md"
homepage = "https://github.com/zefr0x/dutils"
repository = "https://github.com/zefr0x/dutils"
license = "GPL-3.0 AND MIT"

[dependencies]
aho-corasick = "1.1.1"
ascii_table = "4.0.3"
clap = { version = "4.4.4", features = ["derive"] }
freedesktop_entry_parser = "1.3.0"
itertools = "0.11.0"
mime = "0.3.17"
mime-db = "1.7.0"
once_cell = "1.18.0"
pest = "2.7.3"
pest_derive = "2.7.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
shlex = "1.2.0"
thiserror = "1.0.48"
toml = { version = "0.8.1", default_features = false, features = ["parse"] }
url = "2.4.1"
xdg = "2.5.2"
xdg-mime = "0.3.3"

[profile.release]
strip = true
